tests/rosetta/transpiler/CPP/check-machin-like-formulas.error
compile: exit status 1
/workspace/mochi/tests/rosetta/transpiler/CPP/check-machin-like-formulas.cpp:4:10: fatal error: boost/multiprecision/cpp_int.hpp: No such file or directory
    4 | #include <boost/multiprecision/cpp_int.hpp>
      |          ^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
compilation terminated.
